@@ -62,6 +62,8 @@ public:
   void toggle_naked (void) const;
   void change_skin (void) const;
 
+  void levelup_party (void) const;
+
   void fake_time_period (void) const;
   void dec_skip_lift (void) const;
 
